--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   device_preview: ^1.2.0
   socket_io_client: ^3.0.2
   flutter_launcher_icons: ^0.14.2
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
